--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
-    "@angular/material": "^13.0.0",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
@@ -24,6 +24,8 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.1",
+    "lord-icon-element": "^4.0.1",
+    "lottie-web": "^5.10.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
