--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.6.1",
     "lord-icon-element": "^4.0.1",
     "lottie-web": "^5.10.0",
+    "ngx-slick-carousel": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
