--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "jquery": "^3.6.1",
+    "jwt-decode": "^3.1.2",
     "lord-icon-element": "^4.0.1",
     "lottie-web": "^5.10.0",
     "ngx-slick-carousel": "^15.0.0",
